# FTL

./: .travis.yml  README.md  buildMSVC.bat
FTL/: CMakeLists.txt  allocator.hpp  container_traits.hpp  debug.hpp  hash.hpp  hash_map.hpp  io.hpp  timer.hpp  vector.hpp
FTL/tests/: hash.cpp  hash_map.cpp  vector.cpp
